--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title:  Escaping the Doldrums
-description: Chronicles of my foray into DevOps
+title:  Escape the Doldrums
+description: Chronicling my foray into DevOps
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-midnight
